--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/react-fontawesome": "^0.1.19",
     "@hookform/error-message": "^2.0.1",
     "@redux-devtools/extension": "^3.2.3",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,6 +27,8 @@
     "redux": "^4.2.0",
     "reset-css": "^5.0.1",
     "sass": "^1.56.1",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
